--- a/.example.env
+++ b/.example.env
@@ -1,4 +1,5 @@
 WKHTMLTOPPDF_PATH_DRIVER=C:\Program Files\wkhtmltopdf\bin\wkhtmltopdf.exe
+STATIC_DIR=public
 PROTOCOL=http
 DOMAIN=localhost
 PORT=3000
